# wolfenstein-clone-iceland-aws

./: .gitignore  ASSETS.md  CLAUDE.md  Cargo.toml  INITIAL_PROMPT.md  README.md  Trunk.toml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/build-and-test/: build-and-test-summary.md  build-instructions.md  (+3 more)
assets/: README.md
assets/maps/: level1.json
prototypes/simple-raycast/: index.html
scripts/: gen-level.mjs
src/: app.rs  asset-loader.ts  audio-system.ts  audio.ts  boundary.rs  collision.ts  combat-system.ts  combat.ts  constants.rs  constants.ts  enemies.ts  enemy-ai.ts  entity-system.ts  entry.rs  game-loop.ts  game.ts  hud-renderer.ts  hud.ts  input-system.ts  input.ts  lib.rs  main.ts  map-system.ts  map-validation.ts  math-utils.ts  math.rs  placeholder-textures.ts  player.ts  raycaster.ts  renderUtils.ts  renderer.ts  sprites.ts  types.ts  weapon.ts  world.rs
src/assets/: imageAssets.ts  spriteGfx.ts  textures.ts
src/domain/: enemy.rs  map.rs  mod.rs  pickup.rs  player.rs  weapon.rs
src/map/: mapData.ts  mapState.ts
src/math/: vector.ts
src/platform/: assets.rs  audio.rs  input.rs  mod.rs  surface.rs
src/systems/: ai.rs  combat.rs  hud.rs  interactions.rs  mod.rs  movement.rs  raycaster.rs  sprites.rs
tests/: collision.rs  collision.test.ts  combat.test.ts  map-loader.test.ts  map.test.ts  map_parsing.rs  math-utils.test.ts  math.rs  math.test.ts  vector.test.ts
tools/: generate-level.mjs  verify-level.mjs
(+28 files in other folders)
